<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>dev.pgm</groupId>
    <artifactId>Community</artifactId>
    <version>0.2-SNAPSHOT</version>
    <name>Community</name>
    <description>A plugin for managing a Minecraft community</description>
    <url>https://pgm.dev</url>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.mainClass>dev.pgm.community.Community</project.mainClass>
        <project.author>applenick</project.author>
    </properties>

    <modules>
        <module>core</module>
    </modules>

    <repositories>
        <repository>
            <id>pgm.fyi</id>
            <url>https://repo.pgm.fyi/snapshots</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>pgm-repo-snapshots</id>
            <url>https://repo.pgm.fyi/snapshots</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <!-- SportBukkit 1.8 -->
        <dependency>
            <groupId>app.ashcon</groupId>
            <artifactId>sportpaper</artifactId>
            <version>1.8.8-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PGM Utils -->
        <dependency>
            <groupId>tc.oc.pgm</groupId>
            <artifactId>util</artifactId>
            <version>0.16-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>tc.oc.pgm</groupId>
            <artifactId>core</artifactId>
            <version>0.16-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- Database Operations -->
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>idb-core</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>2.4.1</version>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>idb-bukkit</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- Redis -->
        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>3.5.1</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <!-- Smart Invs - https://github.com/MinusKube/SmartInvs -->
        <dependency>
            <groupId>fr.minuskube.inv</groupId>
            <artifactId>smart-invs</artifactId>
            <version>1.2.7</version>
        </dependency>

        <!-- Environment -->
        <dependency>
            <groupId>tc.oc.occ</groupId>
            <artifactId>Environment</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- AFK Detection -->
        <dependency>
            <groupId>tc.oc.occ</groupId>
            <artifactId>AFK</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.incendo</groupId>
            <artifactId>cloud-annotations</artifactId>
            <version>2.0.0</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
            </plugin>

            <!-- Exposes git information to the build environment -->
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.9.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                    <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
                </configuration>
            </plugin>

            <!-- Validates that code is properly formatted with Google's code style -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <ratchetFrom>origin/dev</ratchetFrom>
                    <java>
                        <removeUnusedImports/>
                        <palantirJavaFormat>
                            <version>2.47.0</version>
                            <style>GOOGLE</style>
                            <formatJavadoc>true</formatJavadoc>
                        </palantirJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.2.1</version>
                <dependencies>
                    <dependency>
                        <groupId>de.skuzzle.enforcer</groupId>
                        <artifactId>restrict-imports-enforcer-rule</artifactId>
                        <version>2.1.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <!-- Make sure people are compiling against the correct JDK -->
                    <execution>
                        <id>enforce-jdk</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <!-- Fuzzy match -->
                                    <version>[${maven.compiler.target},)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                    <!-- Make sure people do not import restricted classes -->
                    <execution>
                        <id>enforce-imports</id>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <RestrictImports>
                                    <reason>Use org.jetbrains.annotations to add annotations</reason>
                                    <bannedImport>javax.annotation.**</bannedImport>
                                </RestrictImports>
                                <RestrictImports>
                                    <reason>Use tc.oc.pgm.util.Assert to add assertions</reason>
                                    <bannedImports>
                                        <bannedImport>com.google.common.base.Preconditions.**</bannedImport>
                                        <bannedImport>java.util.Objects.requireNonNull</bannedImport>
                                    </bannedImports>
                                </RestrictImports>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Allows for building of java docs, although not used yet -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <includeDependencySources>true</includeDependencySources>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
        </plugins>
    </build>
</project>
